THF-535: Add texts,  translation and styling
THF-535: rebase branch"

--- a/src/components/events/events.module.scss
+++ b/src/components/events/events.module.scss
@@ -182,9 +182,9 @@ ul.tags {
 .relatedEvent  {
   max-width: 50rem;
   padding: var(--spacing-s);
-  border-top: 1px solid var(--color-black-10);
-  &:last-child {
-    border-bottom: 1px solid var(--color-black-10);
+  border-bottom: 1px solid var(--color-black-10);
+  &:first-child {
+    border-top: 1px solid var(--color-black-10);
   }
   a {
     display: flex;
