THF-587: fix landing page accordion element

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -212,6 +212,8 @@ h5, .h5,
 .accordion_component {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
 }
 
 .content-region {
