THF-533: rebase with develop

--- a/src/components/pageTemplates/eventPage.module.scss
+++ b/src/components/pageTemplates/eventPage.module.scss
@@ -44,6 +44,9 @@
   padding: var(--spacing-m);
 }
 
+.eventLinkWrapper {
+  margin: var(--spacing-m) 0;
+}
 
 .headingContainer {
   padding: var(--spacing-s);
