--- a/src/components/sideContent/sideContent.module.scss
+++ b/src/components/sideContent/sideContent.module.scss
@@ -1,5 +1,5 @@
 .contentRegionWrapper {
-  margin-bottom: var(--spacing-l);
+  margin-bottom: var(--spacing-xl);
 }
 .headerContent {
     display: flex;
